[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.12.*"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)"
]

[tool.pytest.ini_options]
pythonmath = "."
addopts = '-p no:warnings'

[tool.poetry]
packages = [{include = "fast_zero", from = "src"}]

[tool.ruff]
line-lenght = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "fastapi (>=0.128.0,<0.129.0)"
]

[tool.taskipy.tasks]
run = 'fastapi dev app.py'

pre_test = 'task lint'
test = 'poetry run pytest --cov=. --cov-report=term-missing -vv'
post_test = 'coverage html'

lint = 'ruff check . --isolated --no-cache ; ruff check . --diff --isolated --no-cache'
format = 'ruff check . --fix --isolated ; ruff format . --isolated'